--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "shortid": "2.2.16",
     "uuid": "8.3.2",
     "xstate": "4.31.0",
+    "yarn": "^1.22.19",
     "yup": "0.32.11"
   },
   "devDependencies": {
